@@ -1,11 +1,11 @@
 {
-  "timestamp" : "2022-04-16T08:29:20Z",
-  "count" : 5,
-  "count_minmax" : [ 5, 5 ],
-  "count_prev_day_inc" : 5,
+  "timestamp" : "2022-04-16T16:17:12Z",
+  "count" : 13,
+  "count_minmax" : [ 5, 13 ],
+  "count_prev_day_inc" : 13,
   "count_prev_day_dec" : 0,
-  "uniques" : 4,
-  "uniques_minmax" : [ 4, 4 ],
-  "uniques_prev_day_inc" : 4,
+  "uniques" : 7,
+  "uniques_minmax" : [ 4, 7 ],
+  "uniques_prev_day_inc" : 7,
   "uniques_prev_day_dec" : 0
 }
