@@ -1,11 +1,11 @@
 {
-  "count": 5,
-  "uniques": 4,
+  "count": 13,
+  "uniques": 7,
   "clones": [
     {
       "timestamp": "2022-04-16T00:00:00Z",
-      "count": 5,
-      "uniques": 4
+      "count": 13,
+      "uniques": 7
     }
   ]
 }
