@@ -1,5 +1,11 @@
+2022-04-16T16:17:12Z:
+* notice: last 14d: all unq: 13 7
+* notice: prev accum: outdated-all outdated-unq / all unq: 0 0 / 5 4
+* notice: next accum: outdated-all outdated-unq / all unq: 0 0 / 13 7
+* notice: prev json diff // prev day diff: unq all: +3 +8 / -0 -0 // +7 +13 / -0 -0
+
 2022-04-16T08:29:20Z:
 * notice: last 14d: all unq: 5 4
 * notice: prev accum: outdated-all outdated-unq / all unq: 0 0 / 0 0
 * notice: next accum: outdated-all outdated-unq / all unq: 0 0 / 5 4
-* notice: prev json diff // prev day diff: unq all: +4 +5 / -0 -0 // +4 +5 / -0 -0
+* notice: prev json diff // prev day diff: unq all: +4 +5 / -0 -0 // +4 +5 / -0 -0
